--- a/apps/angularapp/src/app/app.component.html
+++ b/apps/angularapp/src/app/app.component.html
@@ -1,4 +1,6 @@
-<add-to-cart-button
-  type="Angular"
-  (addToCart)="buy($event)"
-></add-to-cart-button>
+<p style="margin-left: 10px">
+  <add-to-cart-button
+    type="Angular"
+    (addToCart)="buy($event)"
+  ></add-to-cart-button>
+</p>
