--- a/apps/angularapp/src/app/app.component.html
+++ b/apps/angularapp/src/app/app.component.html
@@ -1,6 +1,12 @@
-<p style="margin-left: 10px">
+<a href="http://localhost:4201">
+  <img src="../assets/react.png" alt="React" width="40" height="40" />
+</a>
+<img src="../assets/angular.png" alt="Angular" width="40" height="40" />
+
+<div>
+  <img src="../assets/angular.png" alt="Avatar" width="300" />
   <add-to-cart-button
     type="Angular"
     (addToCart)="buy($event)"
   ></add-to-cart-button>
-</p>
+</div>
