--- a/apps/angularapp/src/app/app.component.html
+++ b/apps/angularapp/src/app/app.component.html
@@ -1,7 +1,12 @@
-<img src="../assets/angular.png" alt="Angular" width="40" height="40" />
-<a href="http://localhost:4201">
-  <img src="../assets/react.png" alt="React" width="40" height="40" />
-</a>
+<header class="header">
+  <div>
+    <img src="../assets/angular.png" alt="Angular" width="40" height="40" />
+    <a href="http://localhost:4201">
+      <img src="../assets/react.png" alt="React" width="40" height="40" />
+    </a>
+  </div>
+  <shopping-cart style="justify-content: flex-end"></shopping-cart>
+</header>
 
 <div>
   <img src="../assets/angular.png" alt="Avatar" width="300" />
