shopping cart counter

--- a/apps/angularapp/src/app/app.component.html
+++ b/apps/angularapp/src/app/app.component.html
@@ -1,11 +1,11 @@
 <header class="header">
-  <div>
+  <div style="width:300px">
     <img src="../assets/angular.png" alt="Angular" width="40" height="40" />
     <a href="http://localhost:4201">
       <img src="../assets/react.png" alt="React" width="40" height="40" />
     </a>
   </div>
-  <shopping-cart style="justify-content: flex-end"></shopping-cart>
+  <shopping-cart [counter]="counter"></shopping-cart>
 </header>
 
 <div>
