styles and table

--- a/apps/angularapp/src/app/app.component.html
+++ b/apps/angularapp/src/app/app.component.html
@@ -1,5 +1,5 @@
-<header class="header">
-  <div style="width:300px">
+<header class="flex-row">
+  <div style="width:400px">
     <img src="../assets/angular.png" alt="Angular" width="40" height="40" />
     <a href="http://localhost:4201">
       <img src="../assets/react.png" alt="React" width="40" height="40" />
@@ -8,10 +8,25 @@
   <shopping-cart [counter]="counter"></shopping-cart>
 </header>
 
-<div>
-  <img src="../assets/angular.png" alt="Avatar" width="300" />
-  <add-to-cart-button
-    type="Angular"
-    (addToCart)="buy($event)"
-  ></add-to-cart-button>
+<div class="flex-row">
+  <img src="../assets/angular.png" alt="Avatar" width="150" />
+  <div>
+    <table>
+      <tr>
+        <th>Product</th>
+        <th>Type</th>
+        <th>Features</th>
+      </tr>
+      <tr>
+        <td>Angular</td>
+        <td>Framework</td>
+        <td>RxJS, TypeScript</td>
+      </tr>
+    </table>
+
+    <add-to-cart-button
+      type="Angular"
+      (addToCart)="buy($event)"
+    ></add-to-cart-button>
+  </div>
 </div>
