--- a/apps/reactapp/src/app/app.css
+++ b/apps/reactapp/src/app/app.css
@@ -1,3 +1,14 @@
-.header {
+.flex-row {
   display: flex;
+  align-items: center;
+}
+table {
+  border-collapse: collapse;
+  margin-bottom: 5px;
+}
+table,
+th,
+td {
+  border: 1px solid black;
+  padding: 3px;
 }
